...
        Box(
            modifier =
                Modifier
                    .fillMaxHeight()
                    .widthIn(max = maximumWidth)
                    .fillMaxWidth()
                    .testTag("adaptive_pane"),
            content = content,
        )
    }
}

private val CompactContentMaximumWidth = 600.dp
...
